// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Урок 5.17 - События Создание и удаление кнопки по клику Клик по кнопке "Удали меня" 1`] = `<body />`;

exports[`Урок 5.17 - События Создание и удаление кнопки по клику Создана кнопка в body "Удали меня" 1`] = `
<body>
  <button>
    Удали меня
  </button>
</body>
`;

exports[`Урок 5.17 - События Создание списка и запись атрибута по наведению Наведение мыши на элементы списка 1`] = `
<body>
  <ul>
    <li
      title="нулевой элемент"
    >
      нулевой элемент
    </li>
    <li
      title="первый элемент"
    >
      первый элемент
    </li>
    <li
      title="второй элемент"
    >
      второй элемент
    </li>
  </ul>
</body>
`;

exports[`Урок 5.17 - События Создание списка и запись атрибута по наведению Создан список в body из элементов массива 1`] = `
<body>
  <ul>
    <li>
      нулевой элемент
    </li>
    <li>
      первый элемент
    </li>
    <li>
      второй элемент
    </li>
  </ul>
</body>
`;

exports[`Урок 5.17 - События Создание ссылки и кликов по ней Первый клик по ссылке "tensor" 1`] = `
<body>
  <a
    href="https://tensor.ru/"
  >
    tensor https://tensor.ru/
  </a>
</body>
`;

exports[`Урок 5.17 - События Создание ссылки и кликов по ней Создана ссылка "tensor" в body 1`] = `
<body>
  <a
    href="https://tensor.ru/"
  >
    tensor
  </a>
</body>
`;
